# storage/api-docs/api-docs.json
@@ -427,7 +427,7 @@
                 ]
             }
         },
-        "/api/v1/caladrius/get/folios-info-by-document/{document?}/{doctype?}": {
+        "/api/v1/caladrius/get/folios-info-by-document/{document?}/{doctype?}/folio/{folio?}": {
             "get": {
                 "tags": [
                     "Caladrius"
@@ -453,8 +453,49 @@
                         "schema": {
                             "type": "date"
                         }
+                    },
+                    {
+                        "name": "folio?",
+                        "in": "path",
+                        "description": "Number",
+                        "required": false,
+                        "schema": {
+                            "type": "date"
+                        }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "type": "apikey",
+                        "in": "header",
+                        "name": "X-Authorization",
+                        "X-Authorization": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/caladrius/get/active-diagnoses": {
+            "get": {
+                "tags": [
+                    "Caladrius"
+                ],
+                "summary": "Get getAllActiveDiagnoses",
+                "description": "Returns getAllActiveDiagnoses",
+                "operationId": "getAllActiveDiagnoses",
                 "responses": {
                     "200": {
                         "description": "Successful operation"
